# cohost

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  entrypoint.sh  manage.py  pyproject.toml
bookit/: asgi.py  settings.py  urls.py  wsgi.py
reserve/: admin.py  manager.py  models.py
reserve/migrations/: 0001_initial.py
staticfiles/: .keep
