[tool.poetry]
name = "bookit"
version = "0.1.0"
description = ""
authors = ["BBOYADAO <bboyadao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"
django-admin-rangefilter = "^0.10.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
